# internal-ai-process-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: phase-1-minimal-agent.md  setup-phase-0.md
examples/input/: sample.csv
src/internal_ai_process_assistant/: app_info.py  cli.py  minimal_agent.py  tool_executor.py  tool_registry.py
src/internal_ai_process_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/internal_ai_process_assistant/tools/: csv_inspection.py  file_listing.py
tests/: test_app_info.py  test_cli.py  test_csv_inspection.py  test_file_listing.py  test_minimal_agent.py  test_tool_executor.py  test_tool_registry.py
