[project]
name = "internal-ai-process-assistant"
version = "0.1.0"
description = "Internal AI assistant for document and data processing workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
